 * Fix: Page.copy() no longer copies child objects when the accesssor name is included in `exclude_fields_in_copy` (Karl Hobley)
 * Fix: Move focus to the pages explorer menu when open (Helen Chapman)
 * Fix: Clicking the privacy toggle while the page is still loading no longer loads the wrong data in the page (Helen Chapman)


2.5.1 (07.05.2019)
~~~~~~~~~~~~~~~~~~

 * Fix: Prevent crash when comparing StructBlocks in revision history (Adrian Turjak, Matt Westcott)


2.5 (24.04.2019)
~~~~~~~~~~~~~~~~

 * Django 2.2 support (Matt Westcott, Andy Babic)
 * Added support for customising EditHandler-based forms on a per-request basis (Bertrand Bordage)
 * Added more informative error message when `|richtext` filter is applied to a non-string value (mukesh5)
 * Automatic search indexing can now be disabled on a per-model basis via the `search_auto_update` attribute (Karl Hobley)
 * Improved diffing of StreamFields when comparing page revisions (Karl Hobley)
 * Highlight broken links to pages and missing documents in rich text (Brady Moe)
 * Preserve links when copy-pasting rich text content from Wagtail to other tools (Thibaud Colas)
 * Rich text to contentstate conversion now prioritises more specific rules, to accommodate `<p>` and `<br>` elements with attributes (Matt Westcott)
 * Added limit image upload size by number of pixels (Thomas Elliott)
 * Added `manage.py wagtail_update_index` alias to avoid clashes with `update_index` commands from other packages (Matt Westcott)
 * Renamed `target_model` argument on `PageChooserBlock` to `page_type` (Loic Teixeira)
 * `edit_handler` and `panels` can now be defined on a `ModelAdmin` definition (Thomas Kremmel)
 * Add Learn Wagtail to third-party tutorials in documentation (Matt Westcott)
 * Add a Django setting `TAG_LIMIT` to limit number of tags that can be added to any taggit model (Mani)
 * Added instructions on how to generate urls for `ModelAdmin` to documentation (LB (Ben Johnston), Andy Babic)